--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A node js social api plugin",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test/nocial.js"
   },
   "repository": {
     "type": "git",
